# Cookta-online/src/app/shared/models/grocery/food.model.ts
@@ -1,4 +1,5 @@
 import { IIngredient } from './ingredient.interface';
+import {ITag} from "./tag.interface";
 
 export class Food {
 
@@ -17,13 +18,39 @@ export class Food {
     public imageUploaded: number,
     public uploaded: number,
     public dose: number = 4,
-    public tags: string[] = [],
     public lastModified: number,
-    public generated: any = {},
     public subscriptions: number,
     public id: string,
-    public foodId: string
+    public foodId: string,
+    public tags: ITag[],
+    public autoTags: ITag[],
   ) {}
+
+
+  public static FromJson(data: any): Food
+  {
+    return new Food(
+      data['owner'],
+      data['name'],
+      data['desc'],
+      data['isPrivate'],
+      data['published'],
+      data['ingredients'],
+      data['imageUploaded'],
+      data['uploaded'],
+      data['dose'],
+      data['lastModified'],
+      data['subscriptions'],
+      data['id'],
+      data['foodId'],
+      data['tags'],
+      data['autoTags']
+    )
+  }
+  public ToJson()
+  {
+    return new Error('NOT IMPLEMENTED');
+  }
 
 
 
