# Cookta-server/src/routes.ts
@@ -55,6 +55,7 @@ const models: TsoaRoute.Models = {
             "desc": { "dataType": "string", "default": "" },
             "published": { "dataType": "boolean", "default": false },
             "ingredients": { "dataType": "array", "array": { "ref": "iIngredient" }, "default": [] },
+            "imageUploaded": { "dataType": "double", "required": true },
             "uploaded": { "dataType": "double", "required": true },
             "dose": { "dataType": "double", "default": 4 },
             "lastModified": { "dataType": "double", "required": true },
@@ -300,7 +301,7 @@ export function RegisterRoutes(app: express.Express) {
             const controller = new FoodController();
 
 
-            const promise = controller.GetFoods.apply(controller, validatedArgs as any);
+            const promise = controller.GetPublicFoods.apply(controller, validatedArgs as any);
             promiseHandler(controller, promise, response, next);
         });
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
@@ -377,12 +378,12 @@ export function RegisterRoutes(app: express.Express) {
             promiseHandler(controller, promise, response, next);
         });
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    app.delete('/food/:id',
+    app.delete('/food/:foodId',
         authenticateMiddleware([{ "Bearer": [] }]),
         function(request: any, response: any, next: any) {
             const args = {
                 request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
-                id: { "in": "path", "name": "id", "required": true, "dataType": "string" },
+                foodId: { "in": "path", "name": "foodId", "required": true, "dataType": "string" },
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
