# Cookta-server/swagger.json
@@ -77,6 +77,10 @@
 					"default": [],
 					"x-nullable": true
 				},
+				"imageUploaded": {
+					"type": "number",
+					"format": "double"
+				},
 				"uploaded": {
 					"type": "number",
 					"format": "double"
@@ -117,6 +121,7 @@
 			},
 			"required": [
 				"owner",
+				"imageUploaded",
 				"uploaded",
 				"lastModified",
 				"subscriptions",
@@ -767,7 +772,7 @@
 	"paths": {
 		"/food": {
 			"get": {
-				"operationId": "GetFoods",
+				"operationId": "GetPublicFoods",
 				"produces": [
 					"application/json"
 				],
@@ -856,36 +861,6 @@
 						"type": "string"
 					}
 				]
-			},
-			"delete": {
-				"operationId": "DeleteFood",
-				"produces": [
-					"application/json"
-				],
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"schema": {
-							"type": "object"
-						}
-					}
-				},
-				"tags": [
-					"Food"
-				],
-				"security": [
-					{
-						"Bearer": []
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"type": "string"
-					}
-				]
 			}
 		},
 		"/food/{from}/{count}": {
@@ -924,6 +899,38 @@
 						"required": true,
 						"format": "double",
 						"type": "number"
+					}
+				]
+			}
+		},
+		"/food/{foodId}": {
+			"delete": {
+				"operationId": "DeleteFood",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"type": "object"
+						}
+					}
+				},
+				"tags": [
+					"Food"
+				],
+				"security": [
+					{
+						"Bearer": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "foodId",
+						"required": true,
+						"type": "string"
 					}
 				]
 			}
